# backend

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml  settings.py  setup.cfg
api/v1/: room.py  urls.py
api/v1/views/: auth.py  room.py
auth/: .env.template  Dockerfile  main.py  middleware.py  settings.py
auth/api/: __init__.py
auth/api/v1/: __init__.py  parsers.py  users.py
auth/db/: db_models.py
auth/migrations/versions/: 2d71f9bffd00_.py
auth/services/: auth.py  token.py  user.py
config/: .env.example
db/: redis.py
docker/centrifugo/: config.json
docs/: room_scheme.drawio
flake8_plugins/: bugbear_fastapi_depends.py
middleware/: auth.py
services/: auth.py  room_service.py  user_service.py
tests/: conftest.py  test_health.py
